--- a/private/skins/finalium/templates/userexport.twig
+++ b/private/skins/finalium/templates/userexport.twig
@@ -12,7 +12,7 @@
 		<th>Field</th>
 		<th>Value</th>
 	</tr>
-	{% for key,value in userdata %}<tr>
+	{% for key,value in user_data %}<tr>
 		<td>{{ key }}</td>
 		<td>
 			{% if key == 'password' %}
