--- a/scss/finalium/finalium_nostalgia.scss
+++ b/scss/finalium/finalium_nostalgia.scss
@@ -164,6 +164,7 @@ body {
 			margin: 0 18px 0 0;
 			display: block;
 			float: left;
+			height: 34px; // hardcode this instead of using an alternative branding asset
 		}
 		.masthead-search {
 			float: left;
