--- a/private/skins/bootstrap/templates/_layout.twig
+++ b/private/skins/bootstrap/templates/_layout.twig
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-    <script src="/assets/common_bootstrap.js"></script>
+    <script src="/assets/common_bootstrap.js?r={{ get_css_file_date() }}"></script>
     <script>
         subscribe_string = 'Subscribe';
         unsubscribe_string = 'Unsubscribe';
