--- a/private/skins/finalium/templates/browse.twig
+++ b/private/skins/finalium/templates/browse.twig
@@ -8,29 +8,29 @@
             <div class="card">
                 <ul class="nav">
                     <li {% if type=='recent' %}class="active" {% endif %}><a
-                                href="browse.php?type=recent">Most recent</a></li>
+                                href="/browse?type=recent">Most recent</a></li>
                     <li {% if type=='popular' %}class="active" {% endif %}><a
-                                href="browse.php?type=popular">Most popular</a></li>
+                                href="/browse?type=popular">Most popular</a></li>
                     <li {% if type=='discussed' %}class="active" {% endif %}><a
-                                href="browse.php?type=discussed">Most discussed</a></li>
+                                href="/browse?type=discussed">Most discussed</a></li>
                     <li {% if type=='favorited' %}class="active" {% endif %}><a
-                                href="browse.php?type=favorited">Most favorited</a></li>
+                                href="/browse?type=favorited">Most favorited</a></li>
                     <li {% if type=='random' %}class="active" {% endif %}><a
-                                href="browse.php?type=random">Random</a></li>
+                                href="/browse?type=random">Random</a></li>
                 </ul>
             </div>
             {% for level in levels %}
-                {{ small_video_box(level) }}
+                {{ submission_box(level) }}
             {% else %}
                 <div class="header_message header-danger" role="alert">There are no submissions.</div>
             {% endfor %}
 
             {% if type == 'all' %}
-                {% set le_url = 'browse.php?page=%s' %}
+                {% set le_url = 'browse?page=%s' %}
             {% else %}
-                {% set le_url = 'browse.php?type=' ~ type ~ '&page=%s' %}
+                {% set le_url = 'browse?type=' ~ type ~ '&page=%s' %}
             {% endif %}
-            <div class="center">{{ pagination(level_count, glob_lpp, le_url, page) }}</div>
+            <div class="center">{{ pagination(level_count, items_per_page, le_url, page) }}</div>
 
             <br><br>
         </div>
