--- a/private/skins/finalium/templates/components/icon.twig
+++ b/private/skins/finalium/templates/components/icon.twig
@@ -1,1 +1,1 @@
-<i class="ti ti-{{ icon }}" style="font-size: {{ size }}px" aria-hidden="true"></i>
+<i class="bi bi-{{ icon }}" style="font-size: {{ size }}px"></i>
