--- a/private/skins/finalium/templates/components/player.twig
+++ b/private/skins/finalium/templates/components/player.twig
@@ -7,14 +7,14 @@
         <!-- this is not the right location but i don't care -grkb 8/23/2022 -->
 		{% if browser_info.legacy_disable_videojs != true %}
 		<script src="https://vjs.zencdn.net/8.0.4/video.min.js"></script>
-		<link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
+		<link href="/https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
 		{% endif %}
         <video
                 id="sb-video"
                 class="video-js"
                 controls
                 preload="auto"
-                poster="{{ video_thumbnail(video.video_id) }}"
+                poster="{{ thumbnail(video.video_id) }}"
 				type="video/mp4"
                 src="/dynamic/videos/{{ video.video_id }}.converted.mp4">
             <p class="vjs-no-js">
