--- a/private/skins/finalium/templates/components/videolist.twig
+++ b/private/skins/finalium/templates/components/videolist.twig
@@ -1,5 +1,5 @@
 {% for video in videos %}
-    {{ small_video_box(video) }}
+    {{ submission_box(video) }}
 {% endfor %}
 <div class="center">
     <div class="button button-secondary" onclick="showMoreVideos()" id="fromUser">
