--- a/private/skins/finalium/templates/login.twig
+++ b/private/skins/finalium/templates/login.twig
@@ -21,7 +21,7 @@
         {% endif %}
 
         <div class="grid chazizPage">
-            <form method="post" name="loginForm" id="loginForm" action="login.php" class="form-signin">
+            <form method="post" name="loginForm" id="loginForm" action="login" class="form-signin">
                 <h2 class="form-signin-heading">Login</h2>
                 <input type="text" name="username" class="input-block-level" placeholder="Username">
                 <input type="password" name="password" class="input-block-level" placeholder="Password">
@@ -29,7 +29,7 @@
                 <input class="button button-large button-primary" type="submit" value="Login"
                        name="loginsubmit">
                 <br>
-				<p>Don't have an account? <a href="./register.php">Register</a>
+				<p>Don't have an account? <a href="/./register">Register</a>
             </form>
         </div>
     {% endblock %}
