--- a/private/skins/finalium/templates/register.twig
+++ b/private/skins/finalium/templates/register.twig
@@ -9,7 +9,7 @@
 		<br>
     {% endif %}
     <div class="grid chazizPage">
-        <form method="post" name="loginForm" id="loginForm" action="register.php" class="form-signin">
+        <form method="post" name="loginForm" id="loginForm" action="register" class="form-signin">
             <h2 class="form-signin-heading">Register</h2>
 
             <input type="text" name="email" class="input-block-level" placeholder="Email">
