--- a/private/skins/finalium/templates/search.twig
+++ b/private/skins/finalium/templates/search.twig
@@ -5,7 +5,7 @@
 	{% block content %}
         <h1>{{ query }}</h1>
         {% for video in videos %}
-            {{ small_video_box(video) }}
+            {{ submission_box(video) }}
         {% else %}
             <div class="bg-dark"
                  style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;color:white;">
@@ -16,11 +16,11 @@
         {% endfor %}
 
         {% if type == 'all' %}
-            {% set le_url = 'browse.php?page=%s' %}
+            {% set le_url = 'browse?page=%s' %}
         {% else %}
-            {% set le_url = 'browse.php?type=' ~ type ~ '&page=%s' %}
+            {% set le_url = 'browse?type=' ~ type ~ '&page=%s' %}
         {% endif %}
-        {{ pagination(level_count, glob_lpp, le_url, page) }}
+        {{ pagination(level_count, items_per_page, le_url, page) }}
 
         <br><br>
     {% endblock %}
