--- a/private/skins/finalium/templates/upload.twig
+++ b/private/skins/finalium/templates/upload.twig
@@ -3,7 +3,7 @@
 {% block title %}Upload{% endblock %}
 
 	{% block content %}
-        <form name="uploadForm" id="uploadForm" method="post" action="upload.php" enctype="multipart/form-data">
+        <form name="uploadForm" id="uploadForm" method="post" action="upload" enctype="multipart/form-data">
             <div class="card">
                 <div class="card-body-fat">
                     <h2 style="margin-bottom: 0.5em;">Upload a submission</h2>
