--- a/private/skins/finalium/templates/userlist.twig
+++ b/private/skins/finalium/templates/userlist.twig
@@ -14,9 +14,9 @@
 	{% for user in users %}
 	<tr>
 		<td>{{ user.id }}</td>
-		<td>{{ userlink(user) }}
-			{% if user.rank > 1 %}<img src="/assets/icons/shield{% if userdata.darkmode %}_w{%endif%}.svg" height="16">{% endif %}
-			{% if user.rank > 3 %}<img src="/assets/icons/root{% if userdata.darkmode %}_w{%endif%}.svg" height="16">{% endif %}</td>
+		<td>{{ user_link(user) }}
+			{% if user.rank > 1 %}<img src="/assets/icons/shield{% if user_data.darkmode %}_w{%endif%}.svg" height="16">{% endif %}
+			{% if user.rank > 3 %}<img src="/assets/icons/root{% if user_data.darkmode %}_w{%endif%}.svg" height="16">{% endif %}</td>
 		<td class="center">{{ user.joined | date('Y-m-d H:i') }}</td>
 		<td class="center">{{ user.s_num }}</td>
 	</tr>
