--- a/private/skins/finalium/templates/watch.twig
+++ b/private/skins/finalium/templates/watch.twig
@@ -1,140 +1,145 @@
 {% extends "_layout.twig" %}
 {% block head %}
-<meta name="description" content="{{ video.description|length > 250 ? video.description|slice(0, 250) ~ '...' : video.description }}">
-<meta property="og:description" content="{{ video.description|length > 250 ? video.description|slice(0, 250) ~ '...' : video.description }}">
-<meta property="og:image" content="{{ domain }}{{ video_thumbnail(video.video_id) }}">
-<meta property="og:url" content="{{ page_url }}">
-<script>
-   video_id = '{{ video.video_id }}';
-   user_id = '{{ video.author }}';
-</script>
+   <meta name="description" content="{{ submission.description|length > 250 ? submission.description|slice(0, 250) ~ '...' : submission.description }}">
+   <meta property="og:description" content="{{ submission.description|length > 250 ? submission.description|slice(0, 250) ~ '...' : submission.description }}">
+   <meta property="og:image" content="{{ domain }}{{ thumbnail(submission.id, submission.type, submission.bools.custom_thumbnail) }}">
+   <meta property="og:url" content="{{ page_url }}">
+   <script>
+      submission_id = '{{ submission.id }}';
+      user_id = '{{ submission.author.id }}';
+   </script>
 {% endblock %}
-{% block title %}{{ video.title }}{% endblock %}
+{% block title %}{{ submission.title }}{% endblock %}
 {% block content %}
-<div class="watchNext">
- {% if userdata.id == video.author %}
-   <div class="bg-neutral text-light card card-body">
-      <div class="grid">
-         <a class="button button-neutral" href="/edit.php?v={{video.video_id}}">Edit submission</a>
-      </div>
-   </div>
-	{% endif %}
-   <div class="grid">
-      <div class="col-md-10">
-         {% if postType == "video" %}
-            {{ include('/components/player.twig') }}
-         {% elseif postType == "artwork" %}
-            {{ include('/components/artwork.twig') }}
-         {% endif %}
-         <div class="card card-body-fat" style="margin:0;border-bottom:none;padding-bottom:0;">
-            <h1>{{ video.title }}</h1>
+   <div class="watchNext">
+      {% if user_data.id == submission.author %}
+         <div class="bg-dark text-light card card-body" style="border-bottom:none;border-color:black;">
             <div class="grid">
-               <div class="col-md-8">
-                  <img src="{{ profile_picture(video.u_name) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
-                  <a href="user.php?name={{ video.u_name }}" style="color:{{ video.u_customcolor }}"><b style="height: 20px;display: inline-block;">{{ video.u_name }}</b></a> • {{ allVideos }} submissions
-                  <br>
-                  {% if userdata.id == video.author %}<a class="button button-secondary button-small">Settings</a>{% else %}
-                  <button id="subscribe-watch" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}Unfollow{% else %}Follow{% endif %}</button>
-                  <div class="subscribe-count">{{ subCount }}</div>
+               <a class="button button-dark" href="/edit.php?v={{submission.video_id}}">Edit submission</a>
+            </div>
+         </div>
+      {% endif %}
+      <div class="grid">
+         <div class="col-md-10">
+            {{ submission_view(submission) }}
+            <div class="card card-body-fat" style="margin:0;border-bottom:none;padding-bottom:0;">
+               <h1>{{ submission.title }}</h1>
+               <div class="grid">
+                  <div class="col-md-8">
+                     <img src="{{ profile_picture(submission.author.info.username) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
+                     <a href="/user.php?name={{ submission.author.info.username }}" style="color:{{ submission.u_customcolor }}"><b style="height: 20px;display: inline-block;">{{ submission.author.info.username }}</b></a> {# • {{ allVideos }} videos#}
+                     <br>
+                     {% if user_data.id == submission.author %}<a class="button button-secondary button-small">Settings</a>{% else %}
+                        <button id="subscribe-watch" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small" type="button" {% if not log or user_data.id == submission.author %}disabled{% endif %}>{% if subscribed %}Unfollow{% else %}Follow{% endif %}</button>
+                        <div class="subscribe-count">{{ submission.author.followers }}</div>
+                     {% endif %}
+                     <br>
+                  </div>
+                  <div class="col-md-8 right">
+                     <h1 class="viewcount">{{ submission.interactions.views }}</h1>
+                     <div class="likesaber">
+                        <div class="like" style="width:{{ videoRatio }}%"></div>
+                     </div>
+                     <div class="below-likesaber">{{ icon("hand-thumbs-up-fill", 12) }} {{ total_likes }} {{ icon("hand-thumbs-down-fill", 12) }} {{ total_dislikes }}  </div>
+                  </div>
+               </div>
+               <div class="grid" style="margin-top:5px;">
+                  <div class="col-md-8">
+                     <div style="margin-top:-9px;">
+                        <button href="/#" id="{% if is_user_logged_in %}like{% else %}action_unlogged{% endif %}"
+                                class="button {% if rating == 1 %}button-success{% else %}button-secondary-invis{% endif %}">
+                           {{ icon("hand-thumbs-up-fill", 20) }}
+                           Like
+                        </button>
+                        <button href="/#" id="{% if is_user_logged_in %}dislike{% else %}action_unlogged{% endif %}"
+                                class="button {% if rating is same as(0) %}button-danger{% else %}button-secondary-invis{% endif %} tooltip" title="Dislike">
+                           {{ icon("hand-thumbs-down-fill", 20) }}
+                        </button>
+                        {# <button href="/#" id="{% if is_user_logged_in %}favorite{% else %}action_unlogged{% endif %}"
+                                class="button {% if isFavorited %}button-warning{% else %}button-secondary-invis{% endif %} tooltip" title="Favorite">
+                           {{ icon("star-fill", 20) }}
+                        </button> #}
+                     </div>
+                  </div>
+                  <div class="col-md-8 right">
+                     <div class="tab">
+                        <button class="tablinks active" onclick="openTab(event, 'About')" id="defaultOpen">About</button>
+                        <button class="tablinks" onclick="openTab(event, 'Stats')">{{ icon("bar-chart-fill", 12) }}</button>
+                        <button class="tablinks" onclick="openTab(event, 'Flag')">{{ icon("flag-fill", 12) }}</button>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="card card-body-fat">
+               <div id="About" class="tabcontent" style="display: block;">
+                  <p><b>Uploaded on {{ submission.time | date('M j, Y') }}</b></p>
+                  {% if submission.published_originally and submission.original_site %}
+                     <div class="watch-box-author-info-small">First uploaded on {{ submission.original_site }} on {{ submission.published_originally | date('M j, Y') }}</div>
+                  {% elseif submission.original_site %}
+                     <div class="watch-box-author-info-small">Originally uploaded on {{ submission.original_site }}</div>
                   {% endif %}
-                  <br>
+                  {% if submission.description | trim is not empty %}
+                     {{ submission.description | markdown_user_written }}
+                  {% else %}
+                     <p>This submission has no description.</p>
+                  {% endif %}
                </div>
-               <div class="col-md-8 right">
-                  <h1 class="viewcount">{{ viewCount }}</h1>
-                  <div class="likesaber">
-                     <div class="like" style="width:{{ videoRatio }}%"></div>
-                  </div>
-                  <div class="below-likesaber">{{ icon("thumb-up", 12) }} {{ total_likes }} {{ icon("thumb-down", 12) }} {{ total_dislikes }}  </div>
+               <div id="Stats" class="tabcontent" style="display: none;">
+                  <h2>Stats</h2>
+                  <ul style="padding:0">
+                     <li>
+                        Total favorites: {{ total_favorites }}
+                     </li>
+                     <li>
+                        Like/Dislike ratio: {{ videoRatio }}%
+                     </li>
+                     <li>
+                        Last seen: {{ recentView | relative_time }}
+                     </li>
+                  </ul>
                </div>
-            </div>
-            <div class="grid" style="margin-top:5px;">
-               <div class="col-md-8">
-                  <div style="margin-top:-9px;">
-                     <button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}"
-					 class="button {% if rating == 1 %}button-success{% else %}button-secondary{% endif %}">
-                     {{ icon("thumb-up", 20) }}
-                     Like
-                     </button>
-                     <button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" 
-					 class="button {% if rating is same as(0) %}button-danger{% else %}button-secondary{% endif %} tooltip" title="Dislike">
-                     {{ icon("thumb-down", 20) }}
-                     </button>
-                     <button href="#" id="{% if log %}favorite{% else %}action_unlogged{% endif %}"
-                              class="button {% if isFavorited %}button-warning{% else %}button-secondary{% endif %} tooltip" title="Favorite">
-                        {{ icon("star", 20) }}
-                     </button>
-                  </div>
-               </div>
-               <div class="col-md-8 right">
-                  <div class="tab">
-                     <button class="tablinks active" onclick="openTab(event, 'About')" id="defaultOpen">About</button>
-                     <button class="tablinks" onclick="openTab(event, 'Stats')">{{ icon("chart-bar", 12) }}</button>
-                     <button class="tablinks" onclick="openTab(event, 'Flag')">{{ icon("flag", 12) }}</button>
-                  </div>
+               <div id="Flag" class="tabcontent" style="display: none;">
+                  <h2>Flag submission</h2>
+                  This isn't currently implemented.
                </div>
             </div>
-         </div>
-		<div class="card card-body-fat">
-         <div id="About" class="tabcontent" style="display: block;">
-            <p><b>Published on %s", [video.time | date('M j, Y')]) }}</b></p>
-            <p>{{ video.description | markdown }}</p>
-         </div>
-         <div id="Stats" class="tabcontent" style="display: none;">
-            <h2>Stats</h2>
-            <ul style="padding:0">
-               <li>
-               Total favorites: {{ total_favorites }}
-               </li>
-               <li>
-               Like/Dislike ratio: {{ videoRatio }}%
-               </li>
-               <li>
-               Last seen: {{ recentView | relative_time }}
-               </li>
-            </ul>
-         </div>
-         <div id="Flag" class="tabcontent" style="display: none;">
-         <h2>Flag submission</h2>
-         This isn't currently implemented.
-         </div>
-		 </div>
-         <div class="card">
-            <div class="card-body-fat">
-               <h3>Comments ({{ comCount }})</h3>
-			   {% if log %}
-               <div>
-                  <div>
+            <div class="card">
+               <div class="card-body-fat">
+                  <h3>Comments ({{ comCount }})</h3>
+                  {% if is_user_logged_in %}
+                     <div>
+                        <div>
                      <textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3"
-                     placeholder="Enter comment here."></textarea>
-                  </div>
-                  <div class="right">
-                     <button id="post" class="button button-primary" style="margin-bottom:0;">Comment</button>
-                  </div>
+                               placeholder="Enter comment here."></textarea>
+                        </div>
+                        <div class="right">
+                           <button id="post" class="button button-primary" style="margin-bottom:0;">Comment</button>
+                        </div>
+                     </div>
+                  {% endif %}
+                  <div id="comment"></div>
+                  {% for comment in comments %}
+                     {{ comment(comment) }}
+                  {% endfor %}
                </div>
-			   {% endif %}
-               <div id="comment"></div>
-               {% for comment in comments %}
-               {{ comment(comment) }}
-               {% endfor %}
             </div>
          </div>
-      </div>
-      <div class="col-md-6">
-	  <div class="card">
-		  <div class="card-body">
-			 {% for related_video in related_videos %}
-			 {{ small_video_box(related_video)}}
-			 {% endfor %}
-			 <div class="center">
-					  <div class="button button-secondary" onclick="showMoreVideos()" id="fromUser">
-						More
-					  </div>
-			</div>
-					<div class="collapsed" id="fromUserVideoList">
-				</div>
-			  </div>
-		  </div>
+         <div class="col-md-6">
+            <div class="card">
+               <div class="card-body">
+                  {% for submission in submission.recommended %}
+                     {{ submission_box(submission)}}
+                  {% endfor %}
+                  <div class="center">
+                     <div class="button button-secondary" onclick="showMoreVideos()" id="fromUser">
+                        More
+                     </div>
+                  </div>
+                  <div class="collapsed" id="fromUserVideoList">
+                  </div>
+               </div>
+            </div>
+         </div>
       </div>
    </div>
-</div>
 {% endblock %}
