fix some other stuff, readd acmlmboard-style username coloring

--- a/private/skins/finalium/templates/_layout.twig
+++ b/private/skins/finalium/templates/_layout.twig
@@ -59,7 +59,7 @@
         </p>
         <h5>Running OpenSB {{ opensb_version }}</h5>
         {% if isMaintenance != true %}
-            <a class="button button-neutral button-small options-button" role="button">Options</a>
+            <a class="button button-neutral button-small options-button" role="button" href="/theme">Options</a>
             {% if isDebug %}
                 <a class="button button-danger button-small debug-button tooltip" title="Spicy!" role="button">Debug</a>
             {% endif %}
