--- a/private/skins/biscuit/templates/settings.twig
+++ b/private/skins/biscuit/templates/settings.twig
@@ -31,6 +31,11 @@
                 <textarea class="form-submit" name="about" rows="5" cols="80" wrap="virtual">{{ user_data.about }}</textarea>
             </div>
 
+            <div class="form-input">
+                <label for="about">Username color:</label>
+                <input name="customcolor" type="color" value="{{ user_data.customcolor | default('523bb8') }}">
+            </div>
+
             <hr>
 
             <div class="text-title">
