--- a/private/skins/finalium/templates/components/_header.twig
+++ b/private/skins/finalium/templates/components/_header.twig
@@ -8,7 +8,7 @@
                         <div class="masthead-links-container">
                             <div class="masthead-links">
                                 {% for link in navigationList %}
-                                    <a href="/{{ link.url }}">{{ link.name }}</a>
+                                    <a href="{{ link.url }}">{{ link.name }}</a>
                                 {% endfor %}
                             </div>
                         </div>
@@ -38,7 +38,7 @@
                                 <div class="usermenushit" id="masthead-below">
                                     <ul style="padding:0">
                                         {% for link in header_user_links() %}
-                                        <li><a class="menulink" href="/{{ link.url }}">{{ link.name }}</a></li>
+                                        <li><a class="menulink" href="{{ link.url }}">{{ link.name }}</a></li>
                                         {% endfor %}
                                     </ul>
                                 </div>
