--- a/private/skins/finalium/templates/components/comment.twig
+++ b/private/skins/finalium/templates/components/comment.twig
@@ -1,21 +1,26 @@
 <div class="grid commentPost">
-    <div class="col-md-3">
-        {{ user_link(data, 'u_') }}
-        {% if data.u_powerlevel > 1 %}{{ icon("shield", 16) }}{% endif %}
+    <div class="col-md-3 commentAuthor">
+        {{ user_link(data.author) }}
+        <br>
+        <span class="commentDisplayName">{{ data.author.info.displayname }}</span>
 		<br>
-		<span class="time">{{ data.date | relative_time }}</span>
+		<span class="time">{{ data.posted | relative_time }}</span>
     </div>
     <div class="col-md-13" id="{{ data.comment_id }}">
         <div class="comment">
-            {{ data.comment | markdown }}
+            {% if data.post | trim is not empty %}
+                {{ data.post | markdown_user_written }}
+            {% else %}
+                <small>Null comment</small>
+            {% endif %}
         </div>
         <br>
         <p>
             {% if data.replycount > 0 %}
-                <a onclick="showReplies({{ data.comment_id }})">Show replies</a> |
+                <a onclick="showReplies({{ data.id }})">Show replies</a> |
             {% endif %}
             {% if data.id|length > 0 %}
-                <a onclick="reply({{ data.comment_id }})">Reply</a>
+                <a onclick="reply({{ data.id }})">Reply</a>
             {% endif %}
         </p>
     </div>
