--- a/private/skins/finalium/templates/components/_header.twig
+++ b/private/skins/finalium/templates/components/_header.twig
@@ -3,7 +3,7 @@
         <div class="grid" style="margin-bottom: 17.5px;">
             <div class="col-md-10">
                 <div id="header-main">
-                    <a href="/" id="logo-container"><img id="logo" src="{{ website_branding.assets_location }}/logo-wordmark{% if current_theme == 'dark' %}-dark{% endif %}.png" alt="{{ website_branding.name }}"></a>
+                    <a href="/" id="logo-container"><img id="logo" src="{{ logo }}" alt="{{ website_branding.name }}"></a>
                     {% if isMaintenance != true %}
                         <div class="masthead-links-container">
                             <div class="masthead-links">
