--- a/scss/finalium/finalium_darkmode.scss
+++ b/scss/finalium/finalium_darkmode.scss
@@ -33,6 +33,12 @@ $gray-700: #999999;
 $gray-800: #aaaaaa;
 $gray-900: #cccccc;
 
+$masthead-bg: #383838f0;
+$masthead-border: #606060;
+
+$footer-bg: #111111;
+$footer-border: #333333;
+
 $card-bg: $gray-100;
 
 $teal-color: $teal;
