--- a/private/skins/finalium/templates/components/nostalgia/_header.twig
+++ b/private/skins/finalium/templates/components/nostalgia/_header.twig
@@ -1,6 +1,8 @@
 <div class="masthead-container">
 	<div class="masthead">
-		<a href="/index"><img class="logo" src="{{ website_branding.assets_location }}/logo-wordmark.png" alt="{{ website_branding.name }}" border="0"></a>
+		<a href="/index">
+			<img class="logo" src="{{ logo }}" alt="{{ website_branding.name }}" border="0">
+		</a>
 		<div class="masthead-search">
 			<form method="GET" action="search">
 				<input class="masthead-input" type="text" value="" name="query" size="30" maxlength="128">
