--- a/scss/finalium/finalium_qobo.scss
+++ b/scss/finalium/finalium_qobo.scss
@@ -3,6 +3,11 @@
 /// Variables \\\
 @import "_variables";
 
+// inter
+@import url('https://rsms.me/inter/inter.css');
+
+$font: "Inter", "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 $primary: $pink;
 
 $theme-colors: (
@@ -30,9 +35,19 @@ a:visited {
   color: $primary;
 }
 
+h1, h2, h3 {
+	font-weight: 450;
+}
+
+h4, h5, h6 {
+	font-weight: 400;
+}
+
 .chaziz-body {
 	background: #2B3644 url(/assets/qb_branding/login_bg.jpg);
 }
+
+$mastheadwidth: 100%;
 
 /// Imports \\\
 @import "_imports";
