--- a/private/skins/bootstrap/templates/components/_header_default.twig
+++ b/private/skins/bootstrap/templates/components/_header_default.twig
@@ -1,7 +1,7 @@
 <nav id="navbar"
      class="navbar navbar-light bg-light navbar-static-top navbar-expand-md">
     <div class="container">
-        <a class="navbar-brand" href="/"><img src="{{ website_branding.assets_location }}/logo.png" alt="[sb]"
+        <a class="navbar-brand" href="/"><img src="{{ logo }}" alt="{{ website_branding.name }}"
                                               height="32"
                                               class="d-inline-block align-text-top"></a>
         <form class="d-flex" method="GET" action="search">
