--- a/private/skins/bootstrap/templates/components/_header_virtue.twig
+++ b/private/skins/bootstrap/templates/components/_header_virtue.twig
@@ -6,7 +6,7 @@
             </button>
         </div>
 
-        <a class="navbar-brand" href="/"><img src="{{ website_branding.assets_location }}/logo.png" alt="[sb]" class="d-inline-block align-text-top" height="32"></a>
+        <a class="navbar-brand" href="/"><img src="{{ logo }}" alt="{{ website_branding.name }}" class="d-inline-block align-text-top" height="32"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
