--- a/private/skins/bootstrap/templates/login.twig
+++ b/private/skins/bootstrap/templates/login.twig
@@ -19,7 +19,7 @@
                 </div>
             {% endif %}
             <form method="post" name="loginForm" id="loginForm" action="login">
-                <img class="mb-2" src="{{ website_branding.assets_location }}/logo.png" alt="{{ website_branding.name }}"
+                <img class="mb-2" src="{{ logo }}" alt="{{ website_branding.name }}"
                      width="90">
                 <div class="login-box">
                     <h3 class="mb-4 text-white">Login</h3>
