--- a/private/skins/bootstrap/templates/_layout.twig
+++ b/private/skins/bootstrap/templates/_layout.twig
@@ -1,3 +1,9 @@
+{% if is_chaziz_sb %}
+    {% set logo = '/assets/sb_branding/bootstrap/logo.png' %}
+{% else %}
+    {% set logo = website_branding.assets_location ~ '/logo.png' %}
+{% endif %}
+
 <!doctype html>
 <html lang="en">
 <head>
