--- a/private/skins/bootstrap/templates/register.twig
+++ b/private/skins/bootstrap/templates/register.twig
@@ -9,11 +9,8 @@
             {% endif %}
             <div class="container">
             </div>
-            <!-- HOLY SHIT the page looked broken for a while.
-            register page should be merged with login page on sbnext
-            -gamerappa 7/10/2021 -->
             <form method="post" name="registerForm" id="registerForm" action="register">
-                <img class="mb-2" src="{{ website_branding.assets_location }}/logo.png" alt="{{ website_branding.name }}"
+                <img class="mb-2" src="{{ logo }}" alt="{{ website_branding.name }}"
                      width="90">
                 <h3 class="mb-4 text-white">Register</h3>
                 <form method="POST">
