--- a/scss/bootstrap/_signin.scss
+++ b/scss/bootstrap/_signin.scss
@@ -1,9 +1,14 @@
+html.signin,
+body.signin {
+  height: 100%;
+}
+
 body.signin {
   display: flex;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background: #FF8A00 radial-gradient(circle, rgba(255, 178, 88, 1) 0%, rgba(255, 138, 0, 1) 100%);
+  background: #13487E radial-gradient(circle, #12597D 0%, #13487E 100%);
   height: 100%;
 }
 
@@ -20,7 +25,7 @@ body.signin {
 
 .form-signin {
   width: 100%;
-  max-width: 366px;
+  max-width: 330px;
   padding: 15px;
   margin: auto;
 }
